# platform

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix  justfile
.cargo/: config.toml
assets/: paper.avif
css/: input.css  tailwind.config.js
entity/: Cargo.toml
entity/src/: games.rs  lib.rs  mod_authors.rs  mod_media.rs  mod_releases.rs  mods.rs  passkeys.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250623_153441_create_users.rs  m20250624_165444_passkeys.rs  m20250705_185912_mods.rs  m20250706_115515_games.rs  m20250706_123338_mod_media.rs
nix/: flake-module.nix
seed/: Cargo.toml
seed/src/: main.rs  mods.json
src/: app.rs  auth.rs  browse.rs  create.rs  lib.rs  main.rs  prelude.rs  shell.rs
src/auth/: cookie.rs  session.rs  token.rs
src/browse/: media.rs  shop.rs
src/shell/: footer.rs  nav.rs
