[package]
authors = ["Alex Bates <alex@bates64.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "star-haven-platform"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity", optional = true }
migration = { path = "migration", optional = true }
axum = { version = "0.8", features = ["json", "tokio"], optional = true }
axum-macros = { version = "0.5", optional = true }
cfg-if = "1"
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1" }
http = { version = "1", optional = true }
leptos = { version = "0.8", features = ["nightly"] }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
jsonwebtoken = { version = "9", optional = true }
uuid = { version = "1", features = ["serde", "v4"] }
femme = { version = "2", optional = true }
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-time" ], default-features = false, optional= true }
time = { version = "0.3", features = [ "serde", "macros" ] }
webauthn-rs = { version = "0.5", features = [ "conditional-ui" ], optional = true }
webauthn-rs-proto = "0.5"
anyhow = { version = "1", features = ["std"] }
thiserror = "2"
once_cell = "1.21.3"
js-sys = { version = "0.3", optional = true }
phosphor-leptos = "0.8"

[dependencies.web-sys]
version = "0.3"
features = [
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
]
optional = true

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:entity",
    "uuid/js",
    "webauthn-rs-proto/wasm",
]
ssr = [
    "dep:axum-macros",
    "dep:axum",
    "dep:http",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:jsonwebtoken",
    "dep:femme",
    "dep:sea-orm",
    "dep:entity",
    "dep:migration",
    "dep:webauthn-rs",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
site-addr = "127.0.0.1:3000"
tailwind-input-file = "css/input.css"
assets-dir = "assets"
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
