cargo-features = ["codegen-backend"]

[package]
authors = ["Alex Bates <alex@bates64.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "star-haven-platform"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [".", "entity", "migration", "seed"]

[dependencies]
entity = { path = "entity", optional = true }
migration = { path = "migration", optional = true }
axum = { version = "0.8", features = ["json", "tokio"], optional = true }
axum-macros = { version = "0.5", optional = true }
cfg-if = "1"
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1" }
http = { version = "1", optional = true }
leptos = { version = "0.8", features = ["nightly"] }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
server_fn = { version = "0.8", features = ["multipart"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
jsonwebtoken = { version = "9", optional = true }
uuid = { version = "1", features = ["serde", "v4"] }
femme = { version = "2", optional = true }
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-time" ], default-features = false, optional= true }
time = { version = "0.3", features = [ "serde", "macros", "formatting" ] }
webauthn-rs = { version = "0.5", features = [ "conditional-ui" ], optional = true }
webauthn-rs-proto = "0.5"
anyhow = { version = "1", features = ["std"] }
thiserror = "2"
js-sys = { version = "0.3", optional = true }
phosphor-leptos = "0.8"
image = { version = "0.25", optional = true }
directories = { version = "6", optional = true }
tower-http = { version = "0.5.0", features = ["fs"], optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
]
optional = true

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:entity",
    "uuid/js",
    "webauthn-rs-proto/wasm",
    "time/wasm-bindgen",
]
ssr = [
    "dep:axum-macros",
    "dep:axum",
    "dep:http",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:jsonwebtoken",
    "dep:femme",
    "dep:sea-orm",
    "dep:entity",
    "dep:migration",
    "dep:webauthn-rs",
    "dep:image",
    "dep:directories",
    "dep:tower-http",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.server-dev]
inherits = "dev"
#codegen-backend = "cranelift"

# [profile.dev.package."*"]
# opt-level = 3
# debug = 2

# # For build scripts and proc-macros.
# [profile.dev.build-override]
# opt-level = 3

[package.metadata.leptos]
site-addr = "127.0.0.1:3000"
tailwind-input-file = "css/input.css"
assets-dir = "assets"
bin-features = ["ssr"]
bin-profile-dev = "server-dev"
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
