[package]
name = "seed"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
entity = { path = "../entity" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-time" ], default-features = false }
time = { version = "0.3" }
uuid = { version = "1", features = ["serde", "v4"] }
